2020-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/include/tidy/internals.h: Additional defines

	* vignettes/motivation.Rmd: Added uchardet example

2020-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Expanded README.md with example from 'dang'

2020-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added

2020-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.1

2020-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/tidycpp-motivation.Rnw: New pdf wrapper vignette
	* vignettes/rmd/motivation.Rmd: Pdf version of vignette

2020-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/motivation.Rmd: Small edits
	* man/tidyCpp-package.Rd: Idem

2020-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/motivation.Rmd: Second example
	* inst/include/tidy/defines.h: Possible alternates

2020-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/defines.h: setVectorElement singular
	* inst/snippets/dimnamesExamples.cpp: Idem

	* vignettes/motivation.Rmd: First draft of vignette

	* .github/workflows/R-CMD-check.yaml: Add GitHub Actions CI

2020-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/defines.h: Remaming some defs
	* inst/include/tidy/internals.h: Add allocMatrix*, some renaming
	* inst/snippets/dimnamesExamples.cpp: New example
	* inst/snippets/convolveExample.cpp: Idem

2020-09-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/defines.h: Additional definitions
	* inst/include/tidy/internals.h: Idem

2020-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/*: Snapshot with updates

2020-08-10  Dirk Eddelbuettel  <edd@debian.org>

	*  Initial version