@@ -1,3 +1,14 @@
+2020-11-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/tidy/protect.h: New and simpler protection classing,
+	replacing Shield as with a typedef
+	* inst/include/tidy/shield.h: Now just a comment reference to Protect
+	* inst/include/tidyCpp: Added include
+
+	* inst/snippets/dimnamesExample.cpp: Updated example to use Protect
+	* inst/snippets/convolveExample.cpp: Ditto
+	* inst/snippets/protectExamples.cpp: Added
+
 2020-10-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version and date
